kubernetes/main/apps/n8n/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: n8n
  namespace: n8n
  annotations:
    external-dns.alpha.kubernetes.io/target: ip.nidr0x.win
spec:
  parentRefs:
    - name: external
      namespace: gateway
      sectionName: https-gateway
    - name: internal
      namespace: gateway
      sectionName: https-gateway
  hostnames:
    - "n8n.nidr0x.win"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: n8n
          port: 5678
