kubernetes/main/apps/n8n/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-ingress
spec:
  podSelector: {}
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-cilium-gateway
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: n8n
      app.kubernetes.io/instance: n8n
  policyTypes:
    - Ingress
  ingress:
    - ports:
        - protocol: TCP
          port: 5678
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-app-to-database
spec:
  podSelector:
    matchLabels:
      cnpg.io/cluster: n8n-database
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: n8n
              app.kubernetes.io/instance: n8n
      ports:
        - protocol: TCP
          port: 5432
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cloudnative-pg
      ports:
        - protocol: TCP
          port: 5432
        - protocol: TCP
          port: 8000
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-monitoring
      ports:
        - protocol: TCP
          port: 9187
